# VALORANT-rank-yoinker

./: main.py  ui.py
src/: Loadouts.py  agent.py  colors.py  configurator.py  constants.py  logs.py  player_stats.py  rank.py  rpc.py  scoreboard.py  server.py  websocket.py
src/TermUI/: README.md  pyproject.toml
src/TermUI/src/TermUI/: button.py  checkbox.py  colors.py  element.py  position.py  region.py  text.py  textbox.py  ui.py
