[project]
name = "TermUI"
version = "1.0.0"
authors = [
  { name="iiVeil", email="email@email.com" },
]
description = "A interactable UI library built on curses"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
